# bachcompressandpack

./: .gitignore  LICENSE  README.md  batch-packager-cli.spec  batch-packager-gui.spec  cli_entry.py  launch.pyw  pyproject.toml  requirements.txt
.github/workflows/: build.yml
pyapp/: __main__.py  _icon.py  app.py  cli.py  core.py  lanzou_client.py  weblogin.py
pyapp/ui/: __init__.py  main_window.py  pack_interface.py  upload_interface.py  widgets.py  workers.py
scripts/: build-cli.ps1  build-cli.sh  build-exe.ps1  build-portable.ps1  build-portable.sh
tests/: test_cli.py  test_packaging.py
