[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bachcompressandpack"
version = "1.0.0"
description = "批量压缩打包：按每包 ≤100MB 切分压缩，支持 CLI + 图形界面，可选上传蓝奏云（Windows/Linux/macOS）"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["archive", "zip", "7z", "rar", "split", "lanzou", "cli"]

# 核心打包能力仅依赖标准库，无需任何第三方依赖即可运行 `bachpack pack`。
dependencies = []

[project.optional-dependencies]
# 蓝奏云上传（CLI 的 upload / pack --upload 需要）
upload = [
    "requests",
    "requests-toolbelt",
    "lanzou-api==2.6.10",
    "browser-cookie3==0.20.1",
]
# 图形界面（仅 Windows 提供内置 WebView2 登录；Linux/macOS 可装 PyQt6 跑界面）
gui = [
    "PyQt6==6.11.0",
    "PyQt6-Fluent-Widgets==1.11.2",
    "pywebview==6.2.1",
    "requests",
    "requests-toolbelt",
    "lanzou-api==2.6.10",
    "browser-cookie3==0.20.1",
]

[project.scripts]
bachpack = "pyapp.cli:main"

[project.gui-scripts]
bachpack-gui = "pyapp.app:main"

[tool.setuptools]
packages = ["pyapp", "pyapp.ui"]

[project.urls]
Homepage = "https://github.com/zzzwannasleep/bachcompressandpack"
Repository = "https://github.com/zzzwannasleep/bachcompressandpack"
